--- a/yes.html
+++ b/yes.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-  <h1>Thankyou so much!</h1>
+  <h1>Thankyou so much! 😭😭🙏🏻🙏🏻</h1>
   <img src="yes.gif" alt="Yes GIF">
 </body>
 </html>
