--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-  <h1>Do you want to donate to this guy?</h1>
+  <h1>Could you please donate some money?</h1>
   <img src="funny.gif" alt="Funny GIF" class="gif">
 
   <div>
